# artifacts/api-server/src/lib/userAgent.ts
@@ -1,0 +1,30 @@
+export function parseUserAgent(ua: string | undefined): {
+  deviceType: string | null;
+  browser: string | null;
+  os: string | null;
+} {
+  if (!ua) return { deviceType: null, browser: null, os: null };
+
+  let deviceType: string | null = null;
+  if (/mobile/i.test(ua)) deviceType = "Mobile";
+  else if (/tablet|ipad/i.test(ua)) deviceType = "Tablet";
+  else deviceType = "Desktop";
+
+  let browser: string | null = null;
+  if (/edg\//i.test(ua)) browser = "Edge";
+  else if (/opr\//i.test(ua)) browser = "Opera";
+  else if (/chrome/i.test(ua)) browser = "Chrome";
+  else if (/firefox/i.test(ua)) browser = "Firefox";
+  else if (/safari/i.test(ua)) browser = "Safari";
+  else browser = "Other";
+
+  let os: string | null = null;
+  if (/windows/i.test(ua)) os = "Windows";
+  else if (/android/i.test(ua)) os = "Android";
+  else if (/iphone|ipad|ios/i.test(ua)) os = "iOS";
+  else if (/mac os/i.test(ua)) os = "macOS";
+  else if (/linux/i.test(ua)) os = "Linux";
+  else os = "Other";
+
+  return { deviceType, browser, os };
+}
